# home-budgeting-app

./: .gitignore  README.md  home_budget.db  install.sh  instructions.md  main.py  pyproject.toml  requirements.txt
src/home_budget/: __init__.py
src/home_budget/app/: auth.py  crud.py  database.py  dependencies.py  init_categories.py  main.py  models.py  schemas.py
src/home_budget/app/routers/: analytics.py  auth.py  categories.py  expenses.py
src/home_budget/tests/: categories.http  expenses.http  login.http  register.http  tokens.http
